kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-svc-ingress
spec:
  backend:
    serviceName: web
    servicePort: 80
